# FallingStuff

./: .gitignore  .gitmodules  CMakeLists.txt  FallingStuff.code-workspace  README.md  debug-emscripten-httpd.py  emscripten_template_page.html  swa-cli.config.json
FallingStuff.xcodeproj/: project.pbxproj
FallingStuff_OSXScreenSaver/: FallingStuff_OSXScreenSaverView.h  FallingStuff_OSXScreenSaverView.mm  Info.plist
FallingStuff_iOS/: AppDelegate.h
FallingStuff_iOSGLES/: FSTUFF_AppleGL.h  FSTUFF_AppleGL.mm  FSTUFF_MacAppDelegate.h  FSTUFF_MacAppDelegate.m  GLES.mm  GameViewController.h  Main.storyboard  main.m
FallingStuff_iOSGLES/Base.lproj/: Main.storyboard
cmake/: FindSDL2.cmake
docs/: CNAME  FallingStuff.js  FallingStuff.wasm  index.html
src/: AAPLShaderTypes.h  AppDelegate.m  FSTUFF.cpp  FSTUFF.h  FSTUFF_Apple.h  FSTUFF_Apple.mm  FSTUFF_AppleGL.mm  FSTUFF_AppleMetal.h  FSTUFF_AppleMetal.mm  FSTUFF_AppleMetalShaders.metal  FSTUFF_AppleMetalStructs.h  FSTUFF_AppleMetalView.h  FSTUFF_AppleMetalView.mm  FSTUFF_AppleMetalViewController.h  FSTUFF_AppleMetalViewController.mm  FSTUFF_Colors.h  FSTUFF_Constants.h  FSTUFF_GPU.h  FSTUFF_Log.cpp  FSTUFF_MTKView.h  FSTUFF_MTKView.mm  FSTUFF_OpenGL.cpp  FSTUFF_OpenGL.h  FSTUFF_OpenGLES.cpp  FSTUFF_OpenGLES.h  FSTUFF_SDLMain.cpp  FSTUFF_Simulation.cpp  FSTUFF_Simulation.h  FSTUFF_UtilApple.mm  FSTUFF_Version.h  GameViewController.h  GameViewController.m  GameViewController.mm  Shaders.metal  SharedStructures.h  imgui_impl_mtl.h  imgui_impl_mtl.mm  main.m
src/Base.lproj/: MainMenu.xib
src/iOS/: AppDelegate.m  FSTUFF_iOSAppDelegate.h  FSTUFF_iOSAppDelegate.m  FSTUFF_iOSMain.m  main.m
src/iOS/Base.lproj/: Main.storyboard
src/mac/: AppDelegate.h  FSTUFF_MacAppDelegate.h  FSTUFF_MacAppDelegate.m  FSTUFF_MacMain.m  Info.plist
src/mac/Base.lproj/: FSTUFF_MacMainMenu.xib  MainMenu.xib
src/old/: FSTUFF_MatrixMath.cpp  FSTUFF_Simulation.cpp
